--- a/IntuitERP/IntuitERP.csproj
+++ b/IntuitERP/IntuitERP.csproj
@@ -61,6 +61,7 @@
 
 	<ItemGroup>
 	  <None Remove="Config\ConfigDB.db" />
+	  <None Remove="Config\ConfigsDB.db" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -68,19 +69,23 @@
 		<PackageReference Include="Dapper.Contrib" Version="2.0.78" />
 		<PackageReference Include="FluentValidation" Version="11.11.0" />
 		<PackageReference Include="LiteDB" Version="5.0.21" />
-		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.3" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.50" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.3" />
 		<PackageReference Include="MySql.Data" Version="9.2.0" />
 		<PackageReference Include="MySqlConnector" Version="2.4.0" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.11" />
-		<PackageReference Include="System.Data.SQLite.EF6" Version="1.0.119" />
 		<PackageReference Include="System.Private.Uri" Version="4.3.2" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Viwes\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiAsset Include="Config\ConfigsDB.db" />
 	</ItemGroup>
 
 </Project>
