--- a/IntuitERP/IntuitERP.csproj
+++ b/IntuitERP/IntuitERP.csproj
@@ -57,11 +57,15 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+		<!--PDFs folder-->
+		 <MauiAsset Include="Viwes\Reports\PDFs\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+		
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Remove="Config\ConfigDB.db" />
 	  <None Remove="Config\ConfigsDB.db" />
+	
 	</ItemGroup>
 
 	<ItemGroup>
@@ -132,6 +136,9 @@
 	  <MauiXaml Update="Viwes\MenuPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Viwes\Reports\PDFViwer\PdfViwer.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Viwes\Reports\ReportsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -159,7 +166,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Viwes\Reports\PDFViwer\" />
+	  <Folder Include="Viwes\Reports\PDFs\" />
 	</ItemGroup>
 
 </Project>
