--- a/DBconfigurator/DBconfigurator.csproj
+++ b/DBconfigurator/DBconfigurator.csproj
@@ -47,7 +47,6 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -64,7 +63,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\IntuitERP\IntuitERP.csproj" />
+	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
 
 </Project>
