--- a/IntuitERP/IntuitERP.csproj
+++ b/IntuitERP/IntuitERP.csproj
@@ -92,7 +92,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<MauiAsset Include="Config\ConfigsDB.db" />
+		<MauiAsset Include="Config\ConfigsDB.db">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiAsset>
 	</ItemGroup>
 
 	<ItemGroup>
