--- a/IntuitERP/IntuitERP.csproj
+++ b/IntuitERP/IntuitERP.csproj
@@ -3,36 +3,17 @@
 	<PropertyGroup>
 		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
-		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
-
-		<!-- Note for MacCatalyst:
-		The default runtime is maccatalyst-x64, except in Release config, in which case the default is maccatalyst-x64;maccatalyst-arm64.
-		When specifying both architectures, use the plural <RuntimeIdentifiers> instead of the singular <RuntimeIdentifier>.
-		The Mac App Store will NOT accept apps with ONLY maccatalyst-arm64 indicated;
-		either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
-		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
-
 		<OutputType>Exe</OutputType>
 		<RootNamespace>IntuitERP</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-
-		<!-- Display name -->
 		<ApplicationTitle>IntuitERP</ApplicationTitle>
-
-		<!-- App Identifier -->
 		<ApplicationId>com.companyname.intuiterp</ApplicationId>
-
-		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
-
-		<!-- To develop, package, and publish an app to the Microsoft Store, see: https://aka.ms/MauiTemplateUnpackaged -->
 		<WindowsPackageType>MSIX</WindowsPackageType>
-
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
@@ -41,7 +22,7 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 		<Configurations>Debug;Release</Configurations>
 		<GenerateAppInstallerFile>True</GenerateAppInstallerFile>
-		<AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+		<AppxPackageSigningEnabled>false</AppxPackageSigningEnabled>
 		<AppxPackageSigningTimestampDigestAlgorithm>SHA512</AppxPackageSigningTimestampDigestAlgorithm>
 		<AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
 		<AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
@@ -52,30 +33,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
-
-		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
-
-		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
-
-		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
-
-		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
-		<!--PDFs folder-->
-		<MauiAsset Include="Viwes\Reports\PDFs\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
-
+		<MauiAsset Include="Views\Reports\PDFs\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<None Remove="Config\ConfigDB.db" />
 		<None Remove="Config\ConfigsDB.db" />
-
 	</ItemGroup>
 
 	<ItemGroup>
@@ -84,17 +53,12 @@
 		<PackageReference Include="FluentValidation" Version="12.0.0" />
 		<PackageReference Include="LiteDB" Version="5.0.21" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.6" />
-		<!-- Downgraded to .NET 8 -->
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-		<!-- Downgraded to .NET 8 -->
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.40" />
-		<!-- Downgraded to .NET 8 -->
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<!-- Downgraded to .NET 8 -->
 		<PackageReference Include="MySql.Data" Version="9.3.0" />
 		<PackageReference Include="MySqlConnector" Version="2.4.0" />
 		<PackageReference Include="QuestPDF" Version="2023.12.6" />
-		<!-- Downgraded to a .NET 8 compatible version -->
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.11" />
 		<PackageReference Include="System.Private.Uri" Version="4.3.2" />
@@ -102,87 +66,87 @@
 
 	<ItemGroup>
 		<MauiAsset Include="Config\ConfigsDB.db">
-		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</MauiAsset>
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Update="Viwes\Reports\ReportsPage.xaml.cs">
+		<Compile Update="Views\Reports\ReportsPage.xaml.cs">
 			<DependentUpon>ReportsPage.xaml</DependentUpon>
 		</Compile>
-		<Compile Update="Viwes\Search\CompraSearch.xaml.cs">
+		<Compile Update="Views\Search\CompraSearch.xaml.cs">
 			<DependentUpon>CompraSearch.xaml</DependentUpon>
 		</Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-		<MauiXaml Update="Viwes\CadastrodeCidade.xaml">
+		<MauiXaml Update="Views\CadastrodeCidade.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadastrodeCliente.xaml">
+		<MauiXaml Update="Views\CadastrodeCliente.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadastrodeCompra.xaml">
+		<MauiXaml Update="Views\CadastrodeCompra.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadastrodeFornecedor.xaml">
+		<MauiXaml Update="Views\CadastrodeFornecedor.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadastrodeUsuario.xaml">
+		<MauiXaml Update="Views\CadastrodeUsuario.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadastrodeVenda.xaml">
+		<MauiXaml Update="Views\CadastrodeVenda.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadastrodeVendedor.xaml">
+		<MauiXaml Update="Views\CadastrodeVendedor.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadastroProduto.xaml">
+		<MauiXaml Update="Views\CadastroProduto.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\CadstroEstoque.xaml">
+		<MauiXaml Update="Views\CadstroEstoque.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\MaenuPage.xaml">
+		<MauiXaml Update="Views\MaenuPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\MenuPage.xaml">
+		<MauiXaml Update="Views\MenuPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Modals\ModalPicker.xaml">
+		<MauiXaml Update="Views\Modals\ModalPicker.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Reports\PdfViewerPage.xaml">
+		<MauiXaml Update="Views\Reports\PdfViewerPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Reports\ReportsPage.xaml">
+		<MauiXaml Update="Views\Reports\ReportsPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Search\ClienteSearch.xaml">
+		<MauiXaml Update="Views\Search\ClienteSearch.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Search\CompraSearch.xaml">
+		<MauiXaml Update="Views\Search\CompraSearch.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Search\FornecedorSearch.xaml">
+		<MauiXaml Update="Views\Search\FornecedorSearch.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Search\ProdutoSearch.xaml">
+		<MauiXaml Update="Views\Search\ProdutoSearch.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Search\UsuarioSearch.xaml">
+		<MauiXaml Update="Views\Search\UsuarioSearch.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Search\VendaSearch.xaml">
+		<MauiXaml Update="Views\Search\VendaSearch.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Viwes\Search\VendedorSearch.xaml">
+		<MauiXaml Update="Views\Search\VendedorSearch.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Viwes\Reports\PDFs\" />
+		<Folder Include="Views\Reports\PDFs\" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -200,7 +164,18 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)'=='Release|net8.0-windows10.0.19041.0'">
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<WindowsPackageType>None</WindowsPackageType>
+		<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+		<SelfContained>true</SelfContained>
+		<EnableMsixTooling>false</EnableMsixTooling>
+		<AppxPackageSigningEnabled>false</AppxPackageSigningEnabled>
+		<GenerateAppxPackageOnBuild>false</GenerateAppxPackageOnBuild>
+		<Optimize>False</Optimize>
 		<PublishTrimmed>false</PublishTrimmed>
+		<SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
+		<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+		<TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)'=='Release|net8.0-maccatalyst'">
